# pydantic-cli-minimal-example

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  run_mypy.sh
src/pydantic_cli_minimal_example/: __init__.py  cli.py  config.py  logconfig.py
tests/: test_cli.py
