[project]
name = "pydantic-cli-minimal-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rubén Laguna", email = "ruben.laguna@gmail.com" }
]
requires-python = ">=3.13, <3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
]

[project.scripts]
myapp = "pydantic_cli_minimal_example:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
